--- a/matcher/templates/documentation.html
+++ b/matcher/templates/documentation.html
@@ -13,7 +13,37 @@
 <h1>Documentation &ndash; OSM ◀ ▶ Wikidata</h1>
   {% include "form.html" %}
 
-<h3>Todo</h3>
+<div>&nbsp;</div>
+
+<h2>Introduction</h2>
+
+<p>This tool is running live using the Wikidata SPARQL query service and the OSM
+Overpass and Nominatim APIs. It works best with a city, island or
+administrative area.</p>
+
+<p>The index page displays list of existing matches and a search box.
+If you pick an existing result you'll see Wikidata items within the given
+area, for each item there is a list of candidate matching OSM items.</p>
+
+<h2>Matching process</h2>
+
+<p>The matching process takes a few minutes. It downloads potential OSM objects
+from Overpass and loads them into PostgreSQL with osm2pgsql. The interface
+provides status updates while the matching process is running.</p>
+
+<p>A large relation will trigger an Overpass timeout and the match will
+fail.</p>
+
+<p>Once the matching process is complete a 'view match candidates' link will
+appear. The matching is based on names and English Wikipedia categories.</p>
+
+<h2>Development</h2>
+
+<p>Code: {{ "https://github.com/EdwardBetts/osm-wikidata" | urlize }}.</p>
+
+</p>
+
+<h2>Todo</h2>
 <ul>
 <li>Warn the user when a requested area is probably too large.</td>
 <li>Make maximum match distance vary based on category or OSM tags.</li>
