--- a/matcher/templates/wikidata_items.html
+++ b/matcher/templates/wikidata_items.html
@@ -66,7 +66,7 @@
   <div class="loading">
     <span id="load_wikidata" class="pending">loading names from wikidata</span><br>
     <span id="load_overpass" class="pending">retrieving OSM data from Overpass</span>
-    <span id="overpass_slow" class="pending">&nbsp;(this may take a few minutes)</span>
+    <span id="overpass_slow" class="pending">&nbsp;(this will take a few minutes)</span>
     <br>
     <span id="overpass_error">&nbsp;Overpass error:
       <span id="overpass_error_message"></span><br>
