improve existing results list

--- a/matcher/templates/index.html
+++ b/matcher/templates/index.html
@@ -33,9 +33,7 @@
               &mdash; {{ item.address.country }}
             {% endif %}
           </td>
-          <td>
-            {{ item.category }}: {{ item.type }}
-          </td>
+          <td>{{ item.type }}</td>
           <td align="right">{{ item.candidate_count }}</td>
         </tr>
         {# <tr>
