--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -39,7 +39,10 @@
     <h4>Overpass API error</h4>
     <pre>{{ overpass_error }}</pre>
   {% else %}
-    <p>{{ '{:,d}'.format(candidates | count) }} candidates found</p>
+    <p>
+    {{ '{:,d}'.format(full_count) }} candidates found
+    ({{ '{:,d}'.format(multiple_match_count) }} with multiple matches)
+    </p>
     {% set url = url_for('export_osm', osm_id=hit.osm_id, name=relation.export_name) %}
     <p><a href="{{ url }}">Download as OSM XML file</a></p>
   {% endif %}
