show wikidata query on candidate list page

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -92,6 +92,9 @@
       </ul>
     </p>
   {% endfor %}
+  <h4>Wikidata SPARQL query</h4>
+  <pre>{{ relation.get_wikidata_query() }}</pre>
+
 </div>
 </div>
 </div>
