--- a/matcher/templates/index.html
+++ b/matcher/templates/index.html
@@ -21,33 +21,38 @@
   <h1>OSM ◀ ▶ Wikidata</h1>
 
   {% include "form.html" %}
-  {% if not q %}
+  {% if not q and existing %}
     <table class="table table-hover table-sm" style="width: auto">
       <thead>
         <tr>
         <th>name</th>
         <th>type</th>
-        <th align="right">item<br>count</th>
-        <th align="right">match<br>count</th>
-        <th align="right">match<br>percent</th>
+        <th class="text-right">item<br>count</th>
+        <th class="text-right">match<br>count</th>
+        <th class="text-right">match<br>percent</th>
+        <th class="text-right">area<br>(km²)</th>
         </tr>
       <tbody>
-      {% for item in existing %}
+      {% for place in existing %}
         <tr>
           <td>
-            {% set endpoint = 'candidates' if item.namedetails else 'matcher_progress' %}
-            <a href="{{ url_for(endpoint, osm_id=item.osm_id) }}">
-              {{ item.display_name }}</a>
-            {% if item.address.country and item.address.country not in item.display_name %}
-              &mdash; {{ item.address.country }}
+            <a href="{{ url_for('candidates', osm_id=place.osm_id) }}">
+              {{ place.display_name }}</a>
+            {% if place.address.country and place.address.country not in place.display_name %}
+              &mdash; {{ place.address.country }}
             {% endif %}
           </td>
-          <td>{{ item.type }}</td>
-          <td align="right">{{ item.item_count }}</td>
-          <td align="right">{{ item.candidate_count }}</td>
-          {% if item.item_count and item.candidate_count %}
-            <td align="right">{{ '{:.1%}'.format(item.candidate_count / item.item_count) }}</td>
+          <td>{{ place.type }}</td>
+          <td class="text-right">{{ place.items.count() }}</td>
+          <td class="text-right">{{ place.items_with_candidates().count() }}</td>
+          <td class="text-right">
+          {% if place.items.count() %}
+            {{ '{:.1%}'.format(place.match_ratio) }}
+          {% else %}
+            n/a
           {% endif %}
+          <td class="text-right">{{ '{:.1f}'.format(place.area_in_sq_km) }}</td>
+          </td>
         </tr>
         {# <tr>
           <td colspan="2"><pre>{{ item | pprint }}</pre></td>
@@ -89,6 +94,9 @@
       &mdash;
       type: {{ hit.type }}<br>
       bounding box: {{ ', '.join(hit.boundingbox) }}<br>
+      {% if hit.place %}
+        area: {{ '{:.2f}'.format(hit.place.area_in_sq_km) }} km&sup2; <br>
+      {% endif %}
       OSM: <a href="https://www.openstreetmap.org/{{ hit.osm_type }}/{{ hit.osm_id }}">{{ hit.osm_type}} {{ hit.osm_id }}</a><br>
       {% if detail %}
         importance: {{ hit.importance }}<br>
