item categories can be null

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -79,7 +79,9 @@
       &mdash; <a href="{{ i.get_osm_url() }}">Wikidata location on OSM</a>
       <br>
       <ul>
-        <li>Wikipedia categories: {{ ', '.join(i.categories) }}</li>
+        {% if i.categories %}
+          <li>Wikipedia categories: {{ ', '.join(i.categories) }}</li>
+        {% endif %}
         {% if i.tags %}
           <li>possible OSM tags: {{ ', '.join(i.tags) }}</li>
         {% endif %}
