--- a/matcher/templates/index.html
+++ b/matcher/templates/index.html
@@ -25,12 +25,11 @@
     <table class="table table-hover table-sm" style="width: auto">
       <thead>
         <tr>
-        <th>name</th>
-        <th>type</th>
-        <th class="text-right">item<br>count</th>
-        <th class="text-right">match<br>count</th>
-        <th class="text-right">match<br>percent</th>
-        <th class="text-right">area<br>(km²)</th>
+          <th><a href="{{ url_for(request.endpoint, sort='name') }}">name</a></th>
+          <th class="text-right"><a href="{{ url_for(request.endpoint, sort='item') }}">item<br>count</a></th>
+          <th class="text-right"><a href="{{ url_for(request.endpoint, sort='match') }}">match<br>count</a></th>
+          <th class="text-right"><a href="{{ url_for(request.endpoint, sort='ratio') }}">match<br>ratio</a></th>
+          <th class="text-right"><a href="{{ url_for(request.endpoint, sort='area') }}">area<br>(km&sup2;)</a></th>
         </tr>
       <tbody>
       {% for place in existing %}
@@ -43,7 +42,6 @@
               <a href="{{ url_for('candidates', osm_id=place.osm_id) }}">{{ place.display_name }}</a>
             {% endif %}
           </td>
-          <td>{{ place.type }}</td>
           <td class="text-right">{{ place.items.count() }}</td>
           <td class="text-right">{{ with_candidates_count or '' }}</td>
           <td class="text-right">
@@ -51,7 +49,7 @@
             {{ '{:.1%}'.format(place.match_ratio) }}
           {% endif %}
           <td class="text-right">
-            {{ '{:.1f}'.format(place.area_in_sq_km) }}
+            {{ '{:,.1f}'.format(place.area_in_sq_km) }}
           </td>
           </td>
         </tr>
