--- a/matcher/templates/wikidata_items.html
+++ b/matcher/templates/wikidata_items.html
@@ -109,6 +109,7 @@
   var overpass_url = 'http://overpass-api.de/api/interpreter';
   var load_wikidata_url = {{ url_for('load_wikidata', osm_id=osm_id) | tojson }};
   var check_overpass_url = {{ url_for('check_overpass', osm_id=osm_id) | tojson }};
+  var overpass_timeout_url = {{ url_for('overpass_timeout', osm_id=osm_id) | tojson }};
   var post_overpass_url = {{ url_for('post_overpass', osm_id=osm_id) | tojson }};
   var load_postgis_url = {{ url_for('load_postgis', osm_id=osm_id) | tojson }};
   var load_osm2pgsql_url = {{ url_for('load_osm2pgsql', osm_id=osm_id) | tojson }};
@@ -226,7 +227,8 @@
         $('#overpass_error_message').text(errorThrown);
       } else {
         if(textStatus == 'error') {
-          $('#overpass_error_message').text('requested area too large');
+          $('#overpass_error_message').text('overpass timeout');
+          $.post(overpass_timeout_url);
         } else {
           $('#overpass_error_message').text(textStatus);
         }
