add filter field to index

--- a/matcher/templates/form.html
+++ b/matcher/templates/form.html
@@ -1,6 +1,6 @@
 <div>
   <form action="{{ url_for('index') }}">
-    <input name="q" size="65" value="{{ q }}">
+    search: <input name="q" size="60" value="{{ q }}">
     <input type="submit" value="find">
     <a href="{{ url_for('index') }}">back to index</a>
     |
