--- a/matcher/templates/wikidata_items.html
+++ b/matcher/templates/wikidata_items.html
@@ -1,57 +1,16 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>{{ place.display_name }}: OSM ◀ ▶ Wikidata</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap4/css/bootstrap.css') }}">
-  <style>
-    .box {
-      border: 1px solid black;
-      margin: 4px;
-      padding: 4px;
-    }
-    .loading {
-      font-family: courier;
-      background: black;
-      color: white;
-      margin: 4px;
-      padding: 4px;
-    }
-    .active { color: white; }
-    .done { color: white; }
-    .pending { color: gray; }
-    #candidates-link { font-size: 200%; }
+{% extends "base.html" %}
 
-    .done-label {
-      background: darkgreen;
-      padding: 2px;
-    }
+{% block title %}{{ place.display_name }}:{% endblock %}
 
-    #overpass_error_message {
-      background: darkred;
-      padding: 2px;
-    }
-
-    #osm2pgsql_error_message {
-      background: darkred;
-      color: white;
-      padding: 2px;
-    }
-
-  </style>
-  <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
-</head>
-
+{% block content %}
 {% set osm_id = place.osm_id %}
 {% set item_list = place.item_list() %}
 
-<body>
-  <div class="container-fluid">
+  <div class="container my-2">
   <div class="row">
   <div class="col">
-    <h1>{{ place.name }}: OSM ◀ ▶ Wikidata</h1>
+    <h1>{{ place.name }}</h1>
   {% set q = place.display_name %}
-  {% include "form.html" %}
 
   <div class="box">
     <b>{{ place.display_name }}</b><br>
@@ -111,151 +70,21 @@
 </div>
 </div>
 
-  <script>
-  var oql = {{ place.get_oql() | tojson }};
-  var overpass_url = 'https://overpass-api.de/api/interpreter';
-  var load_wikidata_url = {{ url_for('load_wikidata', osm_id=osm_id) | tojson }};
-  var check_overpass_url = {{ url_for('check_overpass', osm_id=osm_id) | tojson }};
-  var overpass_timeout_url = {{ url_for('overpass_timeout', osm_id=osm_id) | tojson }};
-  var post_overpass_url = {{ url_for('post_overpass', osm_id=osm_id) | tojson }};
-  var load_osm2pgsql_url = {{ url_for('load_osm2pgsql', osm_id=osm_id) | tojson }};
-  var load_match_url = {{ url_for('load_match', osm_id=osm_id) | tojson }};
-  var load_individual_match_url = {{ url_for('load_individual_match', osm_id=osm_id, item_id=0) | tojson }};
-  var load_ready = {{ url_for('load_ready', osm_id=osm_id) | tojson }};
-  // var items = {{ item_list | tojson }};
-  var items = [];
-  var current_item = 0;
+<script>
+var overpass_url = 'https://overpass-api.de/api/interpreter';
+var oql = {{ place.get_oql() | tojson }};
+var load_wikidata_url = {{ url_for('load_wikidata', osm_id=osm_id) | tojson }};
+var check_overpass_url = {{ url_for('check_overpass', osm_id=osm_id) | tojson }};
+var overpass_timeout_url = {{ url_for('overpass_timeout', osm_id=osm_id) | tojson }};
+var post_overpass_url = {{ url_for('post_overpass', osm_id=osm_id) | tojson }};
+var load_osm2pgsql_url = {{ url_for('load_osm2pgsql', osm_id=osm_id) | tojson }};
+var load_individual_match_url = {{ url_for('load_individual_match', osm_id=osm_id, item_id=0) | tojson }};
+load_individual_match_url = load_individual_match_url.slice(0, -1);
 
-  load_individual_match_url = load_individual_match_url.slice(0, -1);
+var load_ready = {{ url_for('load_ready', osm_id=osm_id) | tojson }};
+// var items = {{ item_list | tojson }};
 
-  window.setInterval(fade, 1100);
-
-  function fade() {
-     $('.active').fadeOut(500).fadeIn(500);
-  }
-
-  function mark_active(e) {
-    // console.log('active:', e.attr('id'));
-    e.removeClass('pending').addClass('active');
-  }
-
-  function mark_done(e) {
-    // console.log('done:', e.attr('id'));
-    e.removeClass('active').addClass('done');
-    e.append('<span>&nbsp;<span class="done-label">done</span></span>')
-  }
-
-  function load_wikidata() {
-    mark_active($('#load_wikidata'));
-    $.post(load_wikidata_url).done (function(data) {
-      items = data.item_list;
-      $('#item_list_count').text(items.length);
-      mark_done($('#load_wikidata'));
-      check_overpass();
-    });
-  }
-
-  function check_overpass() {
-    mark_active($('#load_overpass'));
-    $.post(check_overpass_url, function(data) {
-      if(data == 'get') {
-        trigger_overpass();
-      } else {
-        mark_done($('#load_overpass'));
-        load_osm2pgsql();
-      }
-    }, 'text');
-  }
-
-  function load_osm2pgsql() {
-    mark_active($('#load_osm2pgsql'));
-    $.post(load_osm2pgsql_url).done (function(data) {
-      if(data == 'done') {
-        mark_done($('#load_osm2pgsql'));
-        load_match();
-      } else { // error
-        $('#load_osm2pgsql').removeClass('active');
-        $('#osm2pgsql_error_message').text(data);
-        $('#osm2pgsql_error').show();
-      }
-    });
-  }
-
-  function load_match() {
-    mark_active($('#load_match'));
-    $('#current_item').show();
-    load_individual_match();
-  }
-
-  function load_done() {
-    $('#current_item').hide();
-    $.post(load_ready).done (function() {
-      mark_done($('#load_match'));
-      $('#candidates-link').show();
-    });
-  }
-
-  function load_individual_match() {
-    if(current_item >= items.length) {
-      load_done();
-      return;
-    }
-    item = items[current_item++];
-    $('#item_num').text(current_item);
-    $('#item_id').text('Q' + item.id);
-    $('#item_name').text(item.name);
-    $.post(load_individual_match_url + item.id).done(load_individual_match);
-  }
-
-  $('#candidates-link').hide();
-  $('#overpass_error').hide();
-  $('#osm2pgsql_error').hide();
-  $('#overpass_slow').hide();
-  $('#current_item').hide();
-  load_wikidata();
-
-  function trigger_overpass() {
-    $('#overpass_slow').show();
-    $.ajax({
-      type: "POST",
-      dataType: "text",
-      contentType: "text/plain; charset=utf-8",
-      url: overpass_url,
-      cache: false,
-      data: oql,
-    })
-    .done(function(data) {
-      $.ajax({
-         type: "POST",
-         dataType: "text",
-         contentType: "text/xml; charset=utf-8",
-         url: post_overpass_url,
-         cache: false,
-         data: data,
-      })
-      .done(function(reply) {
-         mark_done($('#load_overpass'));
-         load_osm2pgsql();
-      });
-      $('#overpass_slow').hide();
-    })
-    .fail(function(jqXHR, textStatus, errorThrown) {
-      $('#overpass_slow').hide();
-      $('#load_overpass').removeClass('active');
-      if (errorThrown) {
-        $('#overpass_error_message').text(errorThrown);
-      } else {
-        if(textStatus == 'error') {
-          $('#overpass_error_message').text('overpass timeout');
-          $.post(overpass_timeout_url);
-        } else {
-          $('#overpass_error_message').text(textStatus);
-        }
-      }
-      $('#overpass_error').show();
-    });
-  }
-  </script>
-
-</body>
-</html>
+</script>
+<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+<script src="{{ url_for('static', filename='js/app.js') }}"></script>
+{% endblock %}
